deployment/local/data_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-route-http
  namespace: smartwearables
spec:
  parentRefs:
    - name: swc-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /data
      backendRefs:
        - name: swc-data-service
          port: 80
          weight: 100
